--- a/index.html
+++ b/index.html
@@ -137,24 +137,17 @@ body { font-family: 'Muli', sans-serif; background: #f8f9fa; }
   <h3>Embedded & IoT Intern</h3>
   <p>Centre for Development of Advanced Computing (C-DAC), Apr 2025 - Jul 2025</p>
   <ul style="margin-left: 20px; padding-left: 0; list-style-type: disc;">
-    <li>Worked on designing and developing smart IoT monitoring systems using environmental and industrial sensors.</li>
-    <li>Integrated RF modules and ESP32/industrial boards for long-range and reliable sensor communication.</li>
-    <li>Gained hands-on experience with MQTT, including QoS levels, retained messages, Last Will, and real-time cloud updates.</li>
-    <li>Implemented CoAP communication using libcoap for lightweight IoT data transfer in constrained networks.</li>
-    <li>Worked with industrial IoT boards, analyzing communication protocols, packet flow, and device interoperability.</li>
-    <li>Applied Python and machine learning techniques for data processing, anomaly detection, and intelligent system behavior.</li>
-    <li>Performed hardware–software integration, sensor calibration, debugging, and validation for real-time automation applications.</li>
-    <li>Tested IoT nodes for accuracy, latency, and communication reliability under different operating conditions.</li>
-    <li>Developed a complete Smart Parking System using ESP32, RF modules, and ultrasonic sensors for slot monitoring.</li>
-    <li>Built real-time parking occupancy detection with continuous cloud synchronization.</li>
-    <li>Designed a cloud-enabled web application using MQTT and REST APIs for live slot availability, advance booking, and subscription plans.</li>
-    <li>Implemented real-time vehicle entry/exit monitoring with automated slot status updates.</li>
-    <li>Built the full IoT system architecture including firmware, MQTT broker integration, backend communication, and front-end visualization.</li>
-    <li>Ensured secure and optimized communication between embedded devices and cloud servers.</li>
-    <li>Added analytics features such as occupancy trends, usage patterns, and system efficiency insights.</li>
-    <li>Performed stress testing, multi-node integration, and communication reliability analysis for smart-city scalability.</li>
-    <li>Successfully deployed the working prototype demonstrating end-to-end automated parking management.</li>
-    <li>Awarded Best Performer of the Batch for outstanding technical innovation and project execution.</li>
+    <li>Designed and deployed a full Smart Parking System using ESP32, RF modules, and ultrasonic sensors for real-time slot monitoring</li>
+    <li>Built a cloud-connected web dashboard with MQTT/REST API for live availability, advance booking, and subscription plans</li>
+    <li>Implemented a complete end-to-end IoT architecture, including firmware, MQTT broker integration, backend communication, and UI</li>
+    <li>Added analytics features (occupancy trends, usage patterns, peak-time insights) to support smart city decision-making.</li>
+    <li>Developed IoT monitoring systems using embedded sensors, RF modules, ESP32, and industrial boards.</li>
+    <li>Implemented MQTT (QoS, retained messages, LWT) and CoAP using libcoap for efficient lightweight communication.</li>
+    <li>Worked on Python + ML for data processing, anomaly detection, and intelligent automation</li>
+    <li>Performed hardware–software integration, sensor calibration, debugging, and system validation for real-time automation</li>
+    <li>Conducted multi-node testing, latency analysis, and communication reliability checks under varying conditions</li>
+    <li>Recognized as Best Performer of the Batch for outstanding innovation and project execution</li>
+      
   </ul>
 </div>
 
